# virtualc

./: .gitignore  CMakeLists.txt  README.md  build.sh
prompts/: request_cmake.txt  request_database.txt  request_default_path.txt  request_icl.txt  request_init.md  request_install.md  request_run.md  request_uninstall.md  request_virtual.txt
src/: g++.cc  gcc.cc  icl.cc  virtualc.cc  virtualc_clear.cc  virtualc_clear.h  virtualc_common.cc  virtualc_common.h  virtualc_init.cc  virtualc_init.h  virtualc_install.cc  virtualc_install.h  virtualc_list.cc  virtualc_list.h  virtualc_run.cc  virtualc_run.h  virtualc_uninstall.cc  virtualc_uninstall.h  virtualc_upgrade.cc  virtualc_upgrade.h
